Ensure text wraps around the brand logo.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -103,10 +103,12 @@ body {
   filter: blur(5px);
 }
 
-.launcher-navigation-container
+.osprey-brand
 {
+  width: 214px;
   background-image: url('../images/logo.png');
   background-repeat: no-repeat;
+
 }
 
 .navbar-inverse
